--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -2,8 +2,8 @@
     <div class="container">
       <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
       <!-- // -->
-        <ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountservcie.currentUser$| async">
-          <ng-container>
+        <ul class="navbar-nav me-auto mb-2 mb-md-0" >
+          <ng-container *ngIf="accountservcie.currentUser$| async">
             <li class="nav-item">
               <a class="nav-link"  routerLink="/members" routerLinkActive="active">Matches</a>
             </li>
@@ -14,7 +14,9 @@
               <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
             </li>
           </ng-container>
-          
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/errors" routerLinkActive="active">Errors</a>
+          </li>
         </ul>
 
         <div class="dropdown" *ngIf="(accountservcie.currentUser$| async) as user" dropdown>
